# eos-file-manager

./: .gitignore  Makefile.am  configure.ac
.tx/: config
data/: Makefile.am  eos-file-manager-autorun-software.desktop.in.in  eos-file-manager-autostart.desktop.in  eos-file-manager-classic.desktop.in  eos-file-manager-connect-server.desktop.in.in  eos-file-manager-search-provider.ini  eos-file-manager.desktop.in.in  org.freedesktop.FileManager1.service.in  org.gnome.Nautilus.SearchProvider.service.in  org.gnome.Nautilus.service.in
debian/: changelog  control  copyright  eos-file-manager-data.install  eos-file-manager.install  rules  watch
docs/: Makefile.am
libnautilus-extension/: Makefile.am  libnautilus-extension-uninstalled.pc.in  libnautilus-extension.pc.in
libnautilus-private/: Makefile.am  nautilus-bookmark.c  nautilus-directory-async.c  nautilus-file-private.h  nautilus-file-utilities.c  nautilus-file-utilities.h  nautilus-file.c  nautilus-file.h  nautilus-monitor.c
nautilus-sendto-extension/: Makefile.am
po/: POTFILES.in  POTFILES.skip  af.po  ar.po  el.po  eo.po  eos-file-manager.pot  es.po  fr.po  gu.po  mr.po  pt.po  pt_BR.po  vi.po
src/: Adwaita.css  Makefile.am  check-eos-file-manager  check-eos-file-manager.in  empathy-cell-renderer-expander.c  eos-file-manager.gresource.xml  nautilus-application.c  nautilus-canvas-view-ui.xml  nautilus-canvas-view.c  nautilus-connect-server-dialog.c  nautilus-directory-view-ui.xml  nautilus-file-management-properties.ui  nautilus-list-view-ui.xml  nautilus-main.c  nautilus-mime-actions.c  nautilus-option-menu-item.c  nautilus-option-menu-item.h  nautilus-pathbar.c  nautilus-pathbar.h  nautilus-places-sidebar.c  nautilus-query-editor.c  nautilus-shell-ui.xml  nautilus-toolbar.c  nautilus-toolbar.h  nautilus-view.c  nautilus-view.h  nautilus-window-menus.c  nautilus-window-private.h  nautilus-window-slot.c  nautilus-window-slot.h  nautilus-window.c
test/: Makefile.am  test.c
